# serializer version: 1
# name: test_deploy_procedure_fails_if_integration_does_not_exists
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ Following external access integration does not exists in Snowflake:          │
  │ external_2                                                                   │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_deploy_procedure_fails_if_object_exists_and_no_replace
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ Following objects already exists. Consider using --replace.                  │
  │ procedure: MOCKDATABASE.MOCKSCHEMA.PROCEDURENAME(string)                     │
  │ procedure: MOCKDATABASE.MOCKSCHEMA.TEST()                                    │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_deploy_procedure_fully_qualified_name[database error]
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ database of procedure custom_database.custom_schema.fqn_procedure_error is   │
  │ redefined in its name                                                        │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_deploy_procedure_fully_qualified_name[ok]
  '''
  +------------------------------------------------------------------------------+
  | object                                                 | type      | status  |
  |--------------------------------------------------------+-----------+---------|
  | CUSTOM_DB.CUSTOM_SCHEMA.FQN_PROCEDURE(name string)     | procedure | created |
  | MOCKDATABASE.CUSTOM_SCHEMA.FQN_PROCEDURE_ONLY_SCHEMA(n | procedure | created |
  | ame string)                                            |           |         |
  | MOCKDATABASE.CUSTOM_SCHEMA.SCHEMA_PROCEDURE(name       | procedure | created |
  | string)                                                |           |         |
  | CUSTOM_DB.MOCKSCHEMA.DATABASE_PROCEDURE(name string)   | procedure | created |
  | CUSTOM_DB.CUSTOM_SCHEMA.DATABASE_PROCEDURE(name        | procedure | created |
  | string)                                                |           |         |
  | CUSTOM_DATABASE.CUSTOM_SCHEMA.FQN_PROCEDURE3(name      | procedure | created |
  | string)                                                |           |         |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_procedure_fully_qualified_name[schema error]
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ schema of procedure custom_schema.fqn_procedure_error is redefined in its    │
  │ name                                                                         │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_deploy_procedure_secrets_without_external_access
  '''
  ╭─ Error ──────────────────────────────────────────────────────────────────────╮
  │ procedureName defined with secrets but without external integration.         │
  ╰──────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
